cambiamos a RIOT API

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,9 +1,19 @@
 # Server Configuration
 PORT=3001
 CORS_ORIGIN=http://localhost:5173
-
-# Environment
 NODE_ENV=development
+
+# Riot Games API
+# Get your API key from: https://developer.riotgames.com/
+RIOT_API_KEY=RGAPI-b93c8093-cd76-4b6e-91f9-0e3d622d6858
+
+# Region Configuration
+# Regions: americas, europe, asia, sea
+RIOT_REGION=europe
+
+# Platform Configuration
+# Platforms: na1, euw1, eune1, kr, br1, la1, la2, oc1, ru, tr1, jp1
+RIOT_PLATFORM=euw1
 
 # Logging
 LOG_LEVEL=info
